update: unshow all the draft

--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -5,12 +5,12 @@ main:
   - name: Home
     url: /
     weight: 10
-  - name: Documentation
-    url: docs/
-    weight: 20
-  - name: Blog
-    url: blog/
-    weight: 30
+  # - name: Documentation
+  #   url: docs/
+  #   weight: 20
+  # - name: Blog
+  #   url: blog/
+  #   weight: 30
   # - name: Showcase
   #   url: showcase/
   #   weight: 40
