--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -42,7 +42,7 @@ header:
     button:
       enable: true
       text: "Go back to Madsys"
-      url: "http://121.36.5.112:1313/"
+      url: "https://madsys.cs.tsinghua.edu.cn/"
     show_search: true
     show_theme_chooser: false
 
