--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: "KVCache.ai" # Website name
-baseURL: 'http://121.36.5.112:11113/' # Website URL
+baseURL: 'http://kvcache.ai/' # Website URL
 
 ############################
 ## PAGE OPTIONS
